--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ APP_URL=http://mosindonesia.test
 DOMAIN=http://mosindonesia.test
 FILESYSTEM_DRIVER=public
 LOG_CHANNEL=stack
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET_KEY=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
